TaskPage mostly working

--- a/MaintenanceApp/app/src/main/AndroidManifest.xml
+++ b/MaintenanceApp/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uk.ac.napier.maintenanceapp">
-    <uses-feature android:name="android.hardware.camera2"
+
+    <uses-feature
+        android:name="android.hardware.camera2"
         android:required="true" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -21,7 +26,8 @@
         <activity android:name=".ReportPage" />
         <activity android:name=".LoginPage" />
         <activity android:name=".RegisterPage" />
-        <activity android:name=".TaskPage"></activity>
+        <activity android:name=".TaskPage" />
+        <activity android:name=".CompletedPage"></activity>
     </application>
 
 </manifest>
