--- a/MaintenanceApp/app/src/main/AndroidManifest.xml
+++ b/MaintenanceApp/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-feature
         android:name="android.hardware.camera2"
         android:required="true" />
-
+    <uses-feature android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
